changed renderer to graphicsManager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,10 @@ include(GoogleTest)
 target_link_libraries(graph_tests PRIVATE GTest::gtest_main)
 gtest_discover_tests(graph_tests)
 
-add_library(renderer ./src/renderer.cpp)
-target_include_directories(renderer PRIVATE ./include)
-target_link_libraries(renderer PUBLIC SDL2main SDL2-static)
+add_library(graphics_manager ./src/graphics_manager.cpp)
+target_include_directories(graphics_manager PRIVATE ./include)
+target_link_libraries(graphics_manager PUBLIC SDL2main SDL2-static)
 
 add_executable(main src/main.cpp)
-target_link_libraries(main PRIVATE renderer)
+target_link_libraries(main PRIVATE graphics_manager)
 target_include_directories(main PRIVATE ./include)
