--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,19 @@ include(FetchContent)
 
 FetchContent_Declare(
     SDL2
-    URL https://www.libsdl.org/release/SDL2-2.0.14.tar.gz
-    GIT_TAG 97405e74e952f51b16c315ed5715b6b9de5a8a50
+    GIT_REPOSITORY  https://github.com/libsdl-org/SDL
+    GIT_TAG         release-2.0.20
+    GIT_PROGRESS    TRUE
 )
-FetchContent_MakeAvailable(SDL2)
+
+FetchContent_Declare(
+    SDL2_IMAGE
+    GIT_REPOSITORY  https://github.com/libsdl-org/SDL_image
+    GIT_TAG         97405e74e952f51b16c315ed5715b6b9de5a8a50
+    GIT_PROGRESS    TRUE
+)
+
+FetchContent_MakeAvailable(SDL2 SDL2_IMAGE)
 
 FetchContent_Declare(
     googletest
@@ -30,9 +39,9 @@ include(GoogleTest)
 target_link_libraries(graph_tests PRIVATE GTest::gtest_main)
 gtest_discover_tests(graph_tests)
 
-add_library(program_manager ./src/program_manager.cpp)
+add_library(program_manager STATIC ./src/program_manager.cpp)
 target_include_directories(program_manager PRIVATE ./include)
-target_link_libraries(program_manager PUBLIC SDL2main SDL2-static)
+target_link_libraries(program_manager PUBLIC SDL2main SDL2-static SDL2_image)
 
 add_executable(main src/main.cpp)
 target_link_libraries(main PRIVATE program_manager)
