--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,19 +10,9 @@ include(FetchContent)
 
 FetchContent_Declare(
     SDL2
-    GIT_REPOSITORY  https://github.com/libsdl-org/SDL
-    GIT_TAG         release-2.0.20
-    GIT_PROGRESS    TRUE
+    URL  https://github.com/libsdl-org/SDL/releases/download/release-2.30.3/SDL2-2.30.3.tar.gz
 )
-
-FetchContent_Declare(
-    SDL2_IMAGE
-    GIT_REPOSITORY  https://github.com/libsdl-org/SDL_image
-    GIT_TAG         97405e74e952f51b16c315ed5715b6b9de5a8a50
-    GIT_PROGRESS    TRUE
-)
-
-FetchContent_MakeAvailable(SDL2 SDL2_IMAGE)
+FetchContent_MakeAvailable(SDL2)
 
 FetchContent_Declare(
     googletest
@@ -41,7 +31,7 @@ gtest_discover_tests(graph_tests)
 
 add_library(program_manager STATIC ./src/program_manager.cpp)
 target_include_directories(program_manager PRIVATE ./include)
-target_link_libraries(program_manager PUBLIC SDL2main SDL2-static SDL2_image)
+target_link_libraries(program_manager PUBLIC SDL2main SDL2-static)
 
 add_executable(main src/main.cpp)
 target_link_libraries(main PRIVATE program_manager)
