--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,12 @@ include(GoogleTest)
 target_link_libraries(graph_tests PRIVATE GTest::gtest_main)
 gtest_discover_tests(graph_tests)
 
-add_library(program_manager ./src/program_manager.cpp ./src/commands.cpp ./src/input_manager.cpp ./src/renderer.cpp)
+add_library(program_manager 
+    ./src/program_manager.cpp 
+    ./src/commands.cpp 
+    ./src/input_manager.cpp 
+    ./src/resource_manager.cpp 
+    ./src/renderer.cpp)
 target_include_directories(program_manager PRIVATE ./include)
 target_link_libraries(program_manager PUBLIC SDL2main SDL2-static)
 
