--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,46 +7,6 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 add_compile_options(-Wall -Werror)
 
 add_library(graph ./src/node.cpp ./src/graph.cpp ./src/classroom.cpp)
-target_include_directories(graph PRIVATE ./include)
-
-add_executable(graph_tests ./test/test_node.cpp ./test/test_graph.cpp ./test/test_classroom.cpp)
-
-include(FetchContent)
-
-FetchContent_Declare(
-    SDL2
-    URL  https://github.com/libsdl-org/SDL/releases/download/release-2.30.3/SDL2-2.30.3.tar.gz
-)
-FetchContent_MakeAvailable(SDL2)
-
-FetchContent_Declare(
-    googletest
-    URL https://github.com/google/googletest/archive/refs/heads/master.zip
-)
-target_include_directories(graph_tests PRIVATE ./include)
-target_link_libraries(graph_tests PRIVATE graph)
-
-FetchContent_MakeAvailable(googletest)
-enable_testing()
-
-include(GoogleTest)
-
-target_link_libraries(graph_tests PRIVATE GTest::gtest_main)
-gtest_discover_tests(graph_tests)
-
-FetchContent_Declare(
-    nlohmann_json
-    URL https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz
-)
-FetchContent_MakeAvailable(nlohmann_json)
-
-add_library(file_handler 
-    ./src/file_handler.cpp
-    ./src/jsonReader.cpp
-    ./src/csvReader.cpp
-)
-target_include_directories(file_handler PRIVATE ./include)
-target_link_libraries(file_handler PUBLIC nlohmann_json graph)
 
 add_library( program_manager 
     ./src/program_manager.cpp 
@@ -57,6 +17,47 @@ add_library( program_manager
     ./src/logic_manager.cpp
     ./src/path.cpp
     )
+
+add_library(file_handler 
+    ./src/file_handler.cpp
+    ./src/jsonReader.cpp
+    ./src/csvReader.cpp
+)
+
+target_include_directories(graph PRIVATE ./include)
+
+option(BUILD_TESTS "Build tests" OFF)
+
+include(FetchContent)
+
+if(BUILD_TESTS)
+    enable_testing()
+    add_subdirectory(test)
+    FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/refs/heads/master.zip
+    )
+    FetchContent_MakeAvailable(googletest)
+endif()
+
+# add_executable(runTests ./test/test_node.cpp ./test/test_graph.cpp ./test/test_classroom.cpp)
+
+FetchContent_Declare(
+    SDL2
+    URL  https://github.com/libsdl-org/SDL/releases/download/release-2.30.3/SDL2-2.30.3.tar.gz
+)
+FetchContent_MakeAvailable(SDL2)
+
+FetchContent_Declare(
+    nlohmann_json
+    URL https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz
+)
+FetchContent_MakeAvailable(nlohmann_json)
+
+
+target_include_directories(file_handler PRIVATE ./include)
+target_link_libraries(file_handler PUBLIC nlohmann_json graph)
+
 target_include_directories(program_manager PRIVATE ./include)
 target_link_libraries(program_manager PUBLIC file_handler graph SDL2main SDL2-static)
 
