--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(RoutesOnWEITI)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-add_compile_options(-Wall -Werror)
+# add_compile_options(-Wall -Werror)
 
 add_library(graph ./src/node.cpp ./src/graph.cpp ./src/classroom.cpp)
 
@@ -15,6 +15,7 @@ add_library( program_manager
     ./src/resource_manager.cpp 
     ./src/renderer.cpp
     ./src/logic_manager.cpp
+    ./src/console_interface.cpp
     ./src/path.cpp
     )
 
